# space-together-api

./: .gitignore  Cargo.toml  Dockerfile  README.Docker.md  README.md  compose.yaml  docker-compose.yml  hhh.html  j  jj
src/: main.rs
src/config/: application_conf.rs  mod.rs
src/controllers/: mod.rs
src/controllers/class_controller/: activities_type_controller.rs  activity_controller.rs  class_controller_controller.rs  class_group_controller.rs  class_room_controller.rs  class_room_type_controller.rs  class_type_controller.rs  mod.rs
src/controllers/conversation_controller/: conversation_controller_controller.rs  message_controller.rs  mod.rs
src/controllers/database_controller/: collections_controller.rs  mod.rs
src/controllers/education_controller/: education_controller_controller.rs  mod.rs
src/controllers/file_controller/: file_controller_controller.rs  file_type_controller.rs  mod.rs
src/controllers/request_controller/: mod.rs  request_controller_controller.rs  request_type_controller.rs
src/controllers/school_controller/: mod.rs  school_controller_controller.rs  school_controller_logo.rs  school_section_controller.rs  section_controller.rs  sector_controller.rs  trade_controller.rs
src/controllers/subject_controller/: mod.rs  subject_controller_controller.rs  subject_type_controller.rs
src/controllers/user_controller/: mod.rs  user_controller_controller.rs  user_images_controller.rs  user_role_controller.rs
src/error/: db_class_error.rs  db_error.rs  mod.rs
src/handlers/: mod.rs
src/libs/: mod.rs
src/libs/db/: conn_db.rs  (+1 more)
src/middleware/: mod.rs  user_auth_middleware.rs
src/models/: mod.rs  request_error_model.rs
src/routers/: all_routers.rs  mod.rs
(+163 files in other folders)
