[package]
name = "space-together-api"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/space-together/space-together-api"
description = "space-together-api which implements all request from space-together applications."
authors = ["Rwanda Bruno Happyheart <brunorwanda4@gmail.com>"]

[dependencies]
actix-web = "4.9.0"
config = "0.10.1"
dotenv = "0.15.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_with = "3.11.0"
tokio = "1.41.1"
slog = "2.5.2"
slog-term = "2.5.0"
slog-async = "2.4.0"
slog-envlogger = "2.2.0"
futures = "0.3.31"

[dependencies.mongodb]
version = "3.1.0"
features = ["sync"]
