[package]
name = "space-together-api"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/space-together/space-together-api"
description = "space-together-api which implements all request from space-together applications."
authors = ["Rwanda Bruno Happyheart <brunorwanda4@gmail.com>"]

[dependencies]
actix-web = "4.9.0"
config = "0.10.1"
dotenv = "0.15.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_with = "3.11.0"
tokio = "1.41.1"
slog = "2.5.2"
slog-term = "2.5.0"
slog-async = "2.4.0"
slog-envlogger = "2.2.0"
futures = "0.3.31"
regex = "1.11.1"
rand = "0.8.5"
itertools = "0.13.0"
actix-ws = "0.3.0"
futures-util = "0.3.31"
actix-cors = "0.7.0"
sha256 = "1.5.0"
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
chrono = "0.4.39"
cloudinary = "0.8.0"

[dependencies.mongodb]
version = "3.1.0"
features = ["sync"]

[[bin]]
name = "space-together-api"
path = "src/main.rs"
